app/Python/syntax_error_correction/log.txt
C:\xampp\htdocs\Evalseer-Plagiarism\app\Python\syntax_error_correction/tests/test.cpp:5:1: warning: missing terminating " character
 " include [ ] = { 0 , 0 , 0 , 0 , 0 } ; 
 ^
C:\xampp\htdocs\Evalseer-Plagiarism\app\Python\syntax_error_correction/tests/test.cpp:5:1: error: missing terminating " character
C:\xampp\htdocs\Evalseer-Plagiarism\app\Python\syntax_error_correction/tests/test.cpp: In function 'void sumOfSubsets(int, int, int)':
C:\xampp\htdocs\Evalseer-Plagiarism\app\Python\syntax_error_correction/tests/test.cpp:10:16: error: 'include' was not declared in this scope
 x ++ ) cout << include [ x ] << " " ;
                ^
C:\xampp\htdocs\Evalseer-Plagiarism\app\Python\syntax_error_correction/tests/test.cpp:12:9: error: 'include' was not declared in this scope
  else { include [ i ] = true ;
         ^
C:\xampp\htdocs\Evalseer-Plagiarism\app\Python\syntax_error_correction/tests/test.cpp: At global scope:
C:\xampp\htdocs\Evalseer-Plagiarism\app\Python\syntax_error_correction/tests/test.cpp:17:15: error: expected initializer before 'int'
  int main ( ) int total = 0 ;
               ^
C:\xampp\htdocs\Evalseer-Plagiarism\app\Python\syntax_error_correction/tests/test.cpp:18:2: error: expected unqualified-id before 'for'
  for ( int i = 0 ;
  ^
C:\xampp\htdocs\Evalseer-Plagiarism\app\Python\syntax_error_correction/tests/test.cpp:19:2: error: 'i' does not name a type
  i < n ;
  ^
C:\xampp\htdocs\Evalseer-Plagiarism\app\Python\syntax_error_correction/tests/test.cpp:20:2: error: 'i' does not name a type
  i ++ ) total += w [ i ] ;
  ^
C:\xampp\htdocs\Evalseer-Plagiarism\app\Python\syntax_error_correction/tests/test.cpp:21:15: error: expected constructor, destructor, or type conversion before '(' token
  sumOfSubsets ( 0 , 0 , total ) ;
               ^
C:\xampp\htdocs\Evalseer-Plagiarism\app\Python\syntax_error_correction/tests/test.cpp:22:2: error: expected unqualified-id before 'return'
  return 0 ;
  ^
C:\xampp\htdocs\Evalseer-Plagiarism\app\Python\syntax_error_correction/tests/test.cpp:23:2: error: expected declaration before '}' token
  }
  ^
